@@ -14,6 +14,7 @@ dpkg (1.17.14) UNRELEASED; urgency=low
     - Add support for target system information via the new DEB_TARGET_ family
       of variables, and new -A and -T options to override defaulting to the
       host system.
+    - Clarify that -a, -t, -e and -i work with the host system.
 
   [ Raphaël Hertzog ]
   * Explain better in deb-triggers(5) why interest/activate-noawait should be
